add features and placement datagen